--- a/index.html
+++ b/index.html
@@ -2,6 +2,28 @@
 <html>
 <body>
 <h1>Framer Exercises</h1>
-<p>I'm hosted this framer demos with Github. Yaaay</p>
+<p>I'm hosting theseframer demos with Github. Yaaay!</p>
+
+<div>
+	<h2> Day 1 - Pages <h2>
+	<body> 
+	<iframe src="https://drive.google.com/open?id=0B1mU2gbNSIcXR0YxOUQ5V1MyaFU" style="width:100%; height:600px; border:0;"></iframe>
+	</body>
+</div>
+
+<div>
+	<h2> Day 2 - Flow content with scrollable page </h2>
+	<body> 
+	<iframe src="https://drive.google.com/open?id=0B1mU2gbNSIcXdVNFQURkZFZHM3M" style="width:100%; height:600px; border:0;"></iframe>
+	</body>
+</div>
+
+<div>
+	<h2> Day 3 - Flow content bottom navigation example for Youtube app </h2>
+	<body> 
+	<iframe src="https://drive.google.com/open?id=0B1mU2gbNSIcXdERhSllvR19xQWs" style="width:100%; height:600px; border:0;"></iframe>
+	</body>
+</div>
+
 </body>
 </html>
