--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 <div>
 	<h2> Day 2 - Flow content with scrollable page </h2>
 	<body> 
-	<iframe src="https://drive.google.com/open?id=0B1mU2gbNSIcXdVNFQURkZFZHM3M" style="width:100%; height:600px; border:0;"></iframe>
+	<iframe src="http://drive.google.com/uc?export=view&id=0B1mU2gbNSIcXdVNFQURkZFZHM3M style="width:100%; height:600px; border:0;"></iframe>
 	</body>
 </div>
+
+
 
 <div>
 	<h2> Day 3 - Flow content bottom navigation example for Youtube app </h2>
