--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
 <div>
 	<h2> Day 1 - Pages <h2>
 	<body> 
-	<iframe src="https://drive.google.com/open?id=0B1mU2gbNSIcXR0YxOUQ5V1MyaFU" style="width:100%; height:600px; border:0;"></iframe>
+	<iframe src="https://drive.google.com/embeddedfolderview?id=0B1mU2gbNSIcXR0YxOUQ5V1MyaFU#list" style="width:100%; height:600px; border:0;">
+	</iframe>
 	</body>
 </div>
 
 <div>
 	<h2> Day 2 - Flow content with scrollable page </h2>
 	<body> 
-	<iframe src="http://drive.google.com/uc?export=view&id=0B1mU2gbNSIcXdVNFQURkZFZHM3M style="width:100%; height:600px; border:0;"></iframe>
+	<iframe src="https://drive.google.com/embeddedfolderview?id=0B1mU2gbNSIcXdVNFQURkZFZHM3M#list" style="width:100%; height:600px; border:0;">	
+	</iframe>
 	</body>
 </div>
 
@@ -23,7 +25,8 @@
 <div>
 	<h2> Day 3 - Flow content bottom navigation example for Youtube app </h2>
 	<body> 
-	<iframe src="https://drive.google.com/open?id=0B1mU2gbNSIcXdERhSllvR19xQWs" style="width:100%; height:600px; border:0;"></iframe>
+		<iframe src="https://drive.google.com/embeddedfolderview?id=0B1mU2gbNSIcXdERhSllvR19xQWs#list" style="width:100%; height:600px; border:0;">	
+	</iframe>
 	</body>
 </div>
 
