--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <div>
 	<h2> Day 1 - Pages <h2>
 	<body> 
-	<iframe src="https://drive.google.com/embeddedfolderview?id=0B1mU2gbNSIcXaFUzRHpJVVJlZEU#grid" style="width:100%; height:600px; border:0;"></iframe>
+<!-- 	<iframe src="https://drive.google.com/embeddedfolderview?id=0B1mU2gbNSIcXaFUzRHpJVVJlZEU#grid" style="width:100%; height:600px; border:0;"></iframe> -->
+	  <img src="https://www.googledrive.com/host/[0B1mU2gbNSIcXaFUzRHpJVVJlZEU]" alt="whatever">
+		<img src="https://drive.google.com/uc?export=view&id=0B1mU2gbNSIcXaFUzRHpJVVJlZEU">	  
 	</body>
 </div>
 
