--- a/index.html
+++ b/index.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Framer Exercises</h1>
-<p>I'm hosting theseframer demos with Github. Yaaay!</p>
+	<body>
+		<h1>Framer Exercises</h1>
+		<p>So much to learn as always!</p>
 
-<div>
-	<h2> Day 1 - Pages <h2>
-	<body> 
-<!-- 	<iframe src="https://drive.google.com/embeddedfolderview?id=0B1mU2gbNSIcXaFUzRHpJVVJlZEU#grid" style="width:100%; height:600px; border:0;"></iframe> -->
-	  <img src="https://www.googledrive.com/host/[0B1mU2gbNSIcXaFUzRHpJVVJlZEU]" alt="whatever">
-		<img src="https://drive.google.com/uc?export=view&id=0B1mU2gbNSIcXaFUzRHpJVVJlZEU">	  
+		<div>
+			<h2> Day 1 - Pages <h2>
+			<body>
+				<iframe src="https://framer.cloud/quGMV" width="500" height="950" frameborder="0"/>
+			</body>
+		</div>
+
+		<div>
+			<h2> Day 2 - Flow content with scrollable page </h2>
+			<body>
+					<iframe src="https://framer.cloud/JjBpv" width="500" height="950" frameborder="0"/>
+			</body>
+		</div>
+
+
+		<div>
+			<h2> Day 3 - Flow content bottom navigation example for Youtube app </h2>
+			<body>
+					<iframe src="https://framer.cloud/quGMV" width="500" height="950" frameborder="0"/>
+			</body>
+		</div>
+
 	</body>
-</div>
-
-<div>
-	<h2> Day 2 - Flow content with scrollable page </h2>
-	<body> 
-	<iframe src="https://drive.google.com/embeddedfolderview?id=0B1mU2gbNSIcXaFUzRHpJVVJlZEU#grid" style="width:100%; height:600px; border:0;"></iframe>
-	</body>
-</div>
-
-
-<div>
-	<h2> Day 3 - Flow content bottom navigation example for Youtube app </h2>
-	<body> 
-	<iframe src="https://drive.google.com/embeddedfolderview?id=0B1mU2gbNSIcXaFUzRHpJVVJlZEU#grid" style="width:100%; height:600px; border:0;"></iframe>
-	</iframe>
-	</body>
-</div>
-
-</body>
 </html>
