--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html>
-	<body>
-		<h1>Framer Exercises</h1>
-		<p>So much to learn as always!</p>
+<head>
+	<title>100 Days of Framer</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
+</head>
+
+
+<body>
+	<h1>Framer Exercises</h1>
+	<p>So much to learn as always!</p>
 		<div>
 			<h2> Day 1 - Pages <h2>
 			<body>
-				<iframe src="https://framer.cloud/quGMV" width="500" height="950" frameborder="0"/>
+				<iframe src="https://framer.cloud/Kjisg" width="500" height="950" frameborder="0"></iframe>
 			</body>
 		</div>
 
 		<div>
 			<h2> Day 2 - Flow content with scrollable page </h2>
 			<body>
-				<iframe src="https://framer.cloud/JjBpv" width="500" height="950" frameborder="0"/>
+				<iframe src="https://framer.cloud/JjBpv" width="500" height="950" frameborder="0"></iframe>
+			</body>
 			</body>
 		</div>
 
@@ -22,7 +33,8 @@
 		<div>
 			<h2> Day 3 - Flow content bottom navigation example for Youtube app </h2>
 			<body>
-				<iframe src="https://framer.cloud/quGMV" width="500" height="950" frameborder="0"/>
+				<iframe src="https://framer.cloud/quGMV" width="500" height="950" frameborder="0"></iframe>
+			</body>
 			</body>
 		</div>
 
